(chores) camel-restdsl-openapi-plugin: use StandardCharsets to simplify decoding